# torchtree-physher

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_linux.yml
benchmarks/: benchmark.py
physherpy/: __init__.py  branch_model.py  coalescent.py  ctmc_scale.py  interface.py  physher.cpp  site_model.py  substitution_model.py  tree_likelihood.py  tree_model.py  utils.py
physherpy/cli/: evolution.py
tests/: test_coalescent.py  test_ctmc_scale.py  test_physher.py  test_site_model.py  test_tree_likelihood.py
torchtree_physher/: __init__.py  _version.py  branch_model.py  coalescent.py  ctmc_scale.py  data_type.py  physher.cpp  site_model.py  substitution_model.py  tree_likelihood.py  tree_model.py
torchtree_physher/cli/: __init__.py  evolution.py
